overflow bug fixed on landscape mode

--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@ body {
     justify-content: center;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background: linear-gradient(0deg, rgb(45, 221, 221), #fff);
-    overflow: hidden;
 }
 
 .container {
